--- a/agency-custom-javascript.html
+++ b/agency-custom-javascript.html
@@ -30,3 +30,32 @@
     document.getElementsByTagName('head')[0].appendChild(newAppleTouchIconLink);
     document.getElementsByTagName('head')[0].appendChild(newManifestLink);
 </script>
+
+<!-- SVG Icon Color -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/svg-injector/1.1.3/svg-injector.min.js"
+    integrity="sha512-LpKoEmPyokcDYSjRJ/7WgybgdAYFsKtCrGC9m+VBwcefe1vHXyUnD9fTQb3nXVJda6ny1J84UR+iBtEYm3OQmQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script id="set-svg-icon-color">
+    window.addEventListener("routeChangeEvent", function (e) {
+        console.log(e.detail.to.name);
+        if (e.detail.to.name === "company-settings-v2") return;
+
+        let navInconInterval = setInterval(() => {
+            const navSVG = document.querySelectorAll("#sidebar-v2 nav svg");
+
+            if (navSVG === true) return;
+
+            const nav = document.querySelectorAll("nav")[0];
+            const navIcons = nav.querySelectorAll("nav img");
+
+            const iconsArray = Array.from(navIcons);
+
+            if (iconsArray.length !== 0 && navIcons) {
+                clearInterval(navInconInterval);
+                for (let icon of iconsArray) {
+                    SVGInjector(icon);
+                }
+            }
+        });
+    });
+</script>
